--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-fastapi==0.103.1
-uvicorn==0.22.0
-tensorflow==2.16.2
-pandas==2.1.0
-scikit-learn==1.3.0
-joblib==1.3.2
-streamlit==1.25.0
-requests==2.31.0
-plotly==5.15.0
+fastapi
+uvicorn
+tensorflow
+pandas
+scikit-learn
+joblib
+streamlit
+requests
+plotly
